<resources>
    <string name="app_name">SamAssistant</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="meeting">Meeting</string>
    <string name="school">School</string>
    <string name="work">Work</string>
    <string name="task">Task</string>
    <string name="due">Due Date</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>